igi general added

--- a/callforpapers.html
+++ b/callforpapers.html
@@ -106,7 +106,7 @@
 <p><b><u>Venue:</u></b> Jaipur Engineering College & Research Centre, Jaipur</p>
 <p><b><u>Dates of Conference:</u></b> April 6-7, 2018</p>
 <p><b><u>Submission Guidelines:</u></b><br/>
-We are pleased to invite you to submit original contributions to ICITDA 2018 via the official submission system for the conference https://easychair.org/conferences/?conf=icitda2018. This can include, technical and experimental, theoretical, conceptual, or a survey in the form of Position Paper/ Fast Abstracts/ Poster Papers/Tool Demonstrations/ Industrial Contributions.<br/>
+We are pleased to invite you to submit original contributions to ICITDA 2018 via the official submission system for the conference <a href="https://easychair.org/conferences/?conf=icitda2018">https://easychair.org/conferences/?conf=icitda2018</a>. This can include, technical and experimental, theoretical, conceptual, or a survey in the form of Position Paper/ Fast Abstracts/ Poster Papers/Tool Demonstrations/ Industrial Contributions.<br/>
 Articles submitted to the conference should report original, previously unpublished research results, experimental or theoretical offering novel research contributions in any aspect of Expert Applications & Security and must not be under consideration for publication elsewhere. Submissions will be double blind peer reviewed and evaluated based on originality, technical and/ or research content/depth, correctness, relevance to conference, contributions, and readability. The full paper submissions will be chosen based on technical merit, interest, applicability and how well they fit a coherent and balanced technical program.<br/>
 Topics of interests should fall under one or more of the conference tracks:<br/><br/></p>
 <div class="table-responsive">
@@ -115,7 +115,7 @@ Topics of interests should fall under one or more of the conference tracks:<br/>
   
   <tr>
     <th width="30%">Track 1: Big Data & Cloud Computing</th>
-        <td><ul><li> The 5Vs of the data landscape: volume, variety, velocity, veracity, value</li>
+        <td><ul>
    <li> Big data science and foundations, analytics, visualisation and semantics</li>
   <li>  Software and tools for big data management</li>
   <li>  Security, privacy and legal issues specific to big data</li>
