--- a/Committee.html
+++ b/Committee.html
@@ -145,7 +145,7 @@
 
 
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-  <span>Advisory Board</span>    
+  <span>Advisory Board (In Alphabetical Order)</span>    
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
  Dr. A.V.Senthil Kumar, Professor, PG and Research Department of Computer Applications, Hindusthan College of Arts and Science Coimbatore, Tamilnadu, INDIA
@@ -235,7 +235,31 @@
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Sukumar Senthilkumar, Professor,Post Doctorate in Mathematics and Post Doctorate in Computer Science & Engineering, School of Computing Science and Engineering, Division of Digital Media Computing, Vellore Institute of Technology-University, Vellore-632014, Tamilnadu, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Surender Yadav,Professor,Career Point University,Kota
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Suvanam Sasidhar Babu, Professor & Dean, Computer Science & Engineering, Adi Shankara Institute of Engineering & Technology, Kerala, INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Syed Asif Ali, Chairman, Department of Computer Science, SMI University Karachi, Pakistan.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) D . Asir Antony Gnana Singh, Assistant Professor,Department of Computer Science and Engineering, M.I.E.T Engineering College, Trichy, INDIA
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Durgesh K. Mishra, Director, Microsoft Innovation Center, Sri Aurobindo Institute of Technology, Indore, MP, India. Visiting Professor, Indian Institute of Technology, Indore
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) J.K.Gothwal, Professor (Computer Science & Engineering),Rajeev Gandhi Memorial College of Engineering & Technology - (Autonomous), Andhra Pradesh, INDIA
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) Krishna Asawa, HoD- CSE, Jaypee Institute of Information Technology, Noida
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. A.K.Dwivedi, RTU, Kota
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. A.siles Balasingh,  Head of Department, Department of Computer science and Engineering , St.Joseph University in Tanzania, Tanzania-Dar es salaam, East Africa.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Aaruni Goel, Associate Professor, Computer Science And Information Technology, IIMT Engineering College, U.P., INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anand Nayyar, Assistant Professor,Department of Computer Applications & IT, KCL Institute of Management and Technology (KCL-IMT),Jalandhar , INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Prof. Anil K Mathur, RTU, Kota
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anil Kumar Chaudhary , Assistant Professor, Department of Electronics Design and Technology,, National Institute of Electronics and Information Technology,U.P. , INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Ankur Singh Bist, Assistant Professor, Computer Science and Engineering, KIET, Ghaziabad, INDIA
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anuj Kumar Gupta, Associate Professor, Department of Computer Science & Engineering, RIMT Institute of Engineering & Technology, INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.Chandrashekhar Shankar Shinde, Assistant Prof., Computer Science & Engineering Department Dr. J. J. Magdum College of Engineering, Maharashtra, INDIA
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Debabrata Samanta, Assistant Professor, Computer Science Engg., Member of the Machine Intelligence Research Labs (MIR Labs.), INDIA.
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dominic D. Damoah, Computer Science, Valley View University, Adentan-Accra Ghana
+ <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dr. Jammi Ashok, Professor, School of Electrical and Computer Engineering, Hawassa University, Hawassa, East Africa
+ 
+ 
+  </div> 
+     <!------------------------- Technical Programming Commitee(TPC)-------------------------------------->     
+  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
+    <span>  Technical Programming Commitee(TPC) (In Alphabetical Order)</span>    
+    </div>     
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
+       Dr. Syed Asif Ali, Chairman, Department of Computer Science, SMI University Karachi, Pakistan.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. T.C. Manjunath, Ph.D. (IIT Bombay), Principal, HKBKCE, Bangalore
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. T. Sheela, Professor and Head, Department of Information Technology, Sri Sairam Engineering College, Chennai, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Tariq Hussain Sheikh, Lecturer, Department of Computer Science Govt. Degree College, Poonch (J&K), INDIA
@@ -252,14 +276,7 @@
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr.Yousef FARHAOUI, Asst. Prof., Department of Computer Science, Faculty of Sciences and Technic, Moulay Ismail University, Morocco.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Eng. Mustafa Nouman Murad Al-Hassan, IT Specialist, Shamara Holding Group, Amman, Jordan
 
- 
-  </div> 
-     <!------------------------- Technical Programming Commitee(TPC)-------------------------------------->     
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-    <span>  Technical Programming Commitee(TPC)</span>    
-    </div>     
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
-Md. Sipon Miah, Assistant Professor, Department of Information Communication Engineering, Islamic University, Kushtia, Bangladesh.
+<hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Md. Sipon Miah, Assistant Professor, Department of Information Communication Engineering, Islamic University, Kushtia, Bangladesh.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mohammad Samadi Gharajeh, Department of Computer Engineering Tabriz Branch, Islamic Azad University Tabriz, Iran
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Mr. Amnesh Goel, Independent Researcher and Analyst, Department of Computer Science and Engineering, Amity University, Noida , INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Mr. Anup Bhange, Assistant Professor, Department of Computer Science and Engg,, KDK College of Engineering Nagpur, Maharashtra, INDIA.
@@ -291,22 +308,7 @@ Md. Sipon Miah, Assistant Professor, Department of Information Communication Eng
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Ms. Nabanita Basu, Department of Computer Science and Engineering, University of Calcutta, Kolkata, INDIA
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Ms. Ramya C, Assistant Professor, Department of Computer Science & Engg., University B.D.T. College of engineering, Karnataka, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Ms. Valarmathi.k, Assistant Prof., Depatment of Information Technology, Easwari Engineering College,Bharathi Salai,Ramapuram,chennai, INDIA
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) D . Asir Antony Gnana Singh, Assistant Professor,Department of Computer Science and Engineering, M.I.E.T Engineering College, Trichy, INDIA
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Durgesh K. Mishra, Director, Microsoft Innovation Center, Sri Aurobindo Institute of Technology, Indore, MP, India. Visiting Professor, Indian Institute of Technology, Indore
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) J.K.Gothwal, Professor (Computer Science & Engineering),Rajeev Gandhi Memorial College of Engineering & Technology - (Autonomous), Andhra Pradesh, INDIA
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.(Dr.) Krishna Asawa, HoD- CSE, Jaypee Institute of Information Technology, Noida
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. A.K.Dwivedi, RTU, Kota
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. A.siles Balasingh,  Head of Department, Department of Computer science and Engineering , St.Joseph University in Tanzania, Tanzania-Dar es salaam, East Africa.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Aaruni Goel, Associate Professor, Computer Science And Information Technology, IIMT Engineering College, U.P., INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anand Nayyar, Assistant Professor,Department of Computer Applications & IT, KCL Institute of Management and Technology (KCL-IMT),Jalandhar , INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Prof. Anil K Mathur, RTU, Kota
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anil Kumar Chaudhary , Assistant Professor, Department of Electronics Design and Technology,, National Institute of Electronics and Information Technology,U.P. , INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Ankur Singh Bist, Assistant Professor, Computer Science and Engineering, KIET, Ghaziabad, INDIA
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anuj Kumar Gupta, Associate Professor, Department of Computer Science & Engineering, RIMT Institute of Engineering & Technology, INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.Chandrashekhar Shankar Shinde, Assistant Prof., Computer Science & Engineering Department Dr. J. J. Magdum College of Engineering, Maharashtra, INDIA
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Debabrata Samanta, Assistant Professor, Computer Science Engg., Member of the Machine Intelligence Research Labs (MIR Labs.), INDIA.
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dominic D. Damoah, Computer Science, Valley View University, Adentan-Accra Ghana
- <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dr. Jammi Ashok, Professor, School of Electrical and Computer Engineering, Hawassa University, Hawassa, East Africa
+ 
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof.Faiyaz Ahmad, Computer Science and EngineeringDepartment,Integral University,Lucknow, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Girish M Tere, Associate Professor, Department of Computer Science, Thakur College of Science and Commerce, Mumbai, INDIA.
  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Gnanajeyaraman Rajaram, Computer Science Engineering Department, PVP College of Engg.& Technology for Women, TAMILNADU, INDIA.
@@ -358,7 +360,7 @@ Md. Sipon Miah, Assistant Professor, Department of Information Communication Eng
   
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;"> 
 
-    <span>Local Advisory Board</span>
+    <span>JECRC Advisory Board</span>
   </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">
   <span>Shri P. K. Tiwari, JECRC</span>   
