--- a/callforpapers.html
+++ b/callforpapers.html
@@ -96,7 +96,7 @@
 
     <!-- code goes here...... -->
     <div class="content_page">
-    <div class="container">
+    <div class="container" align="justify">
     <h1 style="color: #013c65;">Call For Papers</h1>
     <p><a href="Call for Paper-ICITDA.pdf" target="_blank">Download From Here</a></p>
 <p>The International Conference on Informational Technology and digital Applications (ICITDA-2018) is the premier conference for the presentation of new advances and research results in the fields of Information Technology Engineering Application, to be held in the lovely and highly vibrant city of Jaipur in Rajasthan, India. </p>
