--- a/guidelines.html
+++ b/guidelines.html
@@ -90,7 +90,7 @@
     </header>
     <!-- code goes here...... -->
     <div class="content_page">
-    <div class="container">
+    <div class="container" align="justify">
     <h1 style="color:#034261">Author Guidelines</h1>
     <p> Prospective authors are invited to submit manuscripts reporting original unpublished research and recent developments in the topics related to the conference. It is required that the manuscript follows the standard Springer camera-ready format. Submissions must include title, abstract, keywords, author and affiliation with email address. 
 Please double-check the paper size in your page setup to make sure you are using the A4 size paper. The paper should not contain page numbers or any special headers or footers.<br/></p>
