--- a/submission.html
+++ b/submission.html
@@ -91,7 +91,7 @@
     </header>
     <!-- code goes here...... -->
       <div class="content_page">
-    <div class="container">
+    <div class="container" align="justify">
 
     <h1 style="color: #013c65">Paper Submission</h1>
     <p>
