--- a/Committee.html
+++ b/Committee.html
@@ -119,7 +119,7 @@
   </div>     
   <!-------------------------Finance -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-  <span>Technical Programming Commitee(TPC) Chair</span>     
+  <span>Technical Programe Commitee(TPC) Chair</span>     
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
   <span>Ms.Manju Vyas</span>    
@@ -256,7 +256,7 @@
   </div> 
      <!------------------------- Technical Programming Commitee(TPC)-------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-    <span>  Technical Programming Commitee(TPC) (In Alphabetical Order)</span>    
+    <span>  Technical Programe Commitee(TPC) (In Alphabetical Order)</span>    
     </div>     
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
        Dr. Syed Asif Ali, Chairman, Department of Computer Science, SMI University Karachi, Pakistan.
