--- a/registration.html
+++ b/registration.html
@@ -172,7 +172,7 @@
 
             <li> Fee inclusive of Service and other Taxes.</li>
 
-            <li><b><a href="#" target="_blank"><span style="font-size:16px;"> Bank Details</span></b></a></b></li><!-- ICITDA_BankDetails.pdf -->
+            <li><b><a href="ICITDA_BankDetails.pdf" target="_blank"><span style="font-size:16px;"> Bank Details</span></b></a></b></li>
 
             </ul>
                </p>
