--- a/Committee.html
+++ b/Committee.html
@@ -126,7 +126,7 @@
   </div>  
   <!-------------------------Publication Chair -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-  <span>Conveners</span>     
+  <span>Convener(s)</span>     
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
   <span>Mr.Sunil Kumar Jangir</span> 
@@ -149,12 +149,7 @@
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
  
-        Dr. Mahesh Bundele, SMIEEE, LMISTE, Member, STDCOM Tech. & Prof. Activities, IEEE Delhi Section Membership Development Chair, IEEE Rajasthan Subsection, Dean (R&D), Poornima University, Jaipur, Rajasthan, India
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Mustaq Ahemed,MNIT JAIPUR
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Surender Yadav,Professor,Career Point University,Kota
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Vedvyas Jaiprakash Dwivedi,,VC, VTU
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Durgesh K. Mishra, Director, Microsoft Innovation Center, Sri Aurobindo Institute of Technology, Indore, MP, India. Visiting Professor, Indian Institute of Technology, Indore
-      <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Prof. A.K.Dwivedi, RTU, Kota
+           Prof. A.K.Dwivedi, RTU, Kota
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. A.siles Balasingh,  Head of Department, Department of Computer science and Engineering , St.Joseph University in Tanzania, Tanzania-Dar es salaam, East Africa.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Aaruni Goel, Associate Professor, Computer Science And Information Technology, IIMT Engineering College, U.P., INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anand Nayyar, Assistant Professor,Department of Computer Applications & IT, KCL Institute of Management and Technology (KCL-IMT),Jalandhar , INDIA.
@@ -164,6 +159,7 @@
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Anuj Kumar Gupta, Associate Professor, Department of Computer Science & Engineering, RIMT Institute of Engineering & Technology, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Debabrata Samanta, Assistant Professor, Computer Science Engg., Member of the Machine Intelligence Research Labs (MIR Labs.), INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dominic D. Damoah, Computer Science, Valley View University, Adentan-Accra Ghana
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Prof. (Dr.) Durgesh K. Mishra, Director, Microsoft Innovation Center, Sri Aurobindo Institute of Technology, Indore, MP, India. Visiting Professor, Indian Institute of Technology, Indore
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Dr. Jammi Ashok, Professor, School of Electrical and Computer Engineering, Hawassa University, Hawassa, East Africa
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Girish M Tere, Associate Professor, Department of Computer Science, Thakur College of Science and Commerce, Mumbai, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Gnanajeyaraman Rajaram, Computer Science Engineering Department, PVP College of Engg.& Technology for Women, TAMILNADU, INDIA.
@@ -176,8 +172,10 @@
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Kumbharde Mayur .V., Assistant Prof., Department of Computer Engineering, S.N.D. College Of Engineering &amp; Research Center Nashik Maharashtra, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Kuntal Barua, Department of Computer Science and Engg.,Lakshmi Narain College of Technology, Bhawrasla, Indore INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. M.S. Prasad Babu, Professor & Chairman, BOS in Computer Science & System Engg., Andhra University, Visakhapatnam, India
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Mahesh Bundele, SMIEEE, LMISTE, Member, STDCOM Tech. & Prof. Activities, IEEE Delhi Section Membership Development Chair, IEEE Rajasthan Subsection, Dean (R&D), Poornima University, Jaipur, Rajasthan, India
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Manish Gangawane, Department of Computer Science & Engineering, Parvara Rural Education Society, Sir Visvesvaraya Institute of Technology, Nashik, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Mitul K. Patel, Head of Department & Assistant Professor,Department of Computer Engineering, Shree Swami Atmanand Saraswati Institute of Technology, Surat, Gujarat, INDIA
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Mustaq Ahemed,MNIT JAIPUR
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. N. Venkatesan, Associate Prof., Department of Information Technology, Bharathiyar College of Engineering & Technology, Karaikal, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Neeraj Kumar, Assistant Professor, Depat. of Computer Science and Engineering, JIMS Engineering Management Technical Campus, Noida, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Niraj Singhal, Assistant Professor, Faculty of Electronics, Informatics and Computer Engineering,Shobhit University, U.P., INDIA.
@@ -198,8 +196,10 @@
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Stuti Asthana, Assistant Professor, Department of Computer Science & Engineering, Technocrats Institute of Technology(E), Bhopal, , INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Suneeta Agarwal, Department of CSE, MNNIT
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Sunil Pathak, Associate Professor & Head, Department of Computer Science & Engineering, Chanakya Technical Campus, Jaipur, Rajasthan, INDIA
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Surender Yadav,Professor,Career Point University,Kota
+       
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Suryakant Pathak, Associate Professor, Department of Computer Science & Engineering, Dr. K N Modi University Newai, Rajasthan, INDIA
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Velmurugan J , Assistant Professor, Department of Information Technology, Veltech Hightech Dr.Rangarajan Dr.Sakunthala Engineering College, Chennai, INDIA
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.)Vedvyas Jaiprakash Dwivedi,,VC, VTU
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Velmurugan J , Assistant Professor, Department of Information Technology, Veltech Hightech Dr.Rangarajan Dr.Sakunthala Engineering College, Chennai, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Vijaykumar S. Bidve, Assistant Professor, Information Technology Deptt., STES’s SKNCOE, Pune, India
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Vilender Kumar, Professor, Deptt. of Computer Science & Information Technology, IITM, New Delhi, INDIA.
