--- a/submission.html
+++ b/submission.html
@@ -104,6 +104,7 @@ Papers Selected in ICITDA 2018 will be considered for Publication in UGC approve
                     <br><a href="https://easychair.org/conferences/?conf=icitda2018" target="_blank"><img src="images/ec.png" alt="EC image here" style="width: 300px;" /></a>
                     <br>
                     <a href="https://easychair.org/conferences/?conf=icitda2018">https://easychair.org/conferences/?conf=icitda2018</a><br>
+                    <span style="text-align: center;">OR</span><br />
                     <a href="mailto:icitda@jecrc.ac.in">icitda@jecrc.ac.in</a><br></center>
                     <p>
                     For paper template & formatting instructions &nbsp <a href="https://easychair.org/publications/for_authors" target="_blank">Click Here</a>
