--- a/Committee.html
+++ b/Committee.html
@@ -119,10 +119,13 @@
   </div>     
   <!-------------------------Finance -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
-  <span>Technical Programe Commitee(TPC) Chair</span>     
+  <span>Technical Programe Commitee(TPC) Chair(s)</span>     
   </div>     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);">    
-  <span>Ms.Manju Vyas</span>    
+    Prof. Rajeev Gupta, Pro-VC, RTU,Kota  
+  <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">   
+  <span>Ms.Manju Vyas</span>
+
   </div>  
   <!-------------------------Publication Chair -------------------------------------->     
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 pad0" style="padding: 10px!important;background: rgb(3, 141, 170);color:#ffffff;font-weight: bolder;font-size: 1.1em;margin-top: 15px;">    
@@ -177,12 +180,13 @@
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Mitul K. Patel, Head of Department & Assistant Professor,Department of Computer Engineering, Shree Swami Atmanand Saraswati Institute of Technology, Surat, Gujarat, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. (Dr.) Mustaq Ahemed,MNIT JAIPUR
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. N. Venkatesan, Associate Prof., Department of Information Technology, Bharathiyar College of Engineering & Technology, Karaikal, INDIA.
+       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">Prof. Naveen Hemrajani, JECRC University, Jaipur 
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Neeraj Kumar, Assistant Professor, Depat. of Computer Science and Engineering, JIMS Engineering Management Technical Campus, Noida, INDIA
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Niraj Singhal, Assistant Professor, Faculty of Electronics, Informatics and Computer Engineering,Shobhit University, U.P., INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Pawan Kumar Goel, Department of Computer Science & Engineering, Shamli Institute of Engineering & Technology, Meerut, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Payal Jain, Department of Computer Science & Engineering, M.M.E.C., Maharishi Markandeshwar University, Ambala, INDIA.
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Pranay Meshram, Assistant Prof., Department of Computer Science & Engineering, Priyadarshini J L College of Engineering, Nagpur, INDIA.
-       <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Rajeev Gupta, Pro-VC, RTU,Kota
+       
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Rajesh Duvvuru, Dept. of CSE, NIT, Jamshedpur, Jarkhand, India
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Ramesh Bansal, University of Pretoria, South Africa
        <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Prof. Ravindra N. Jogekar, Assistant Prof., Department of Computer Science & Engineering, Priyadarshini J L College of Engineering, Nagpur, INDIA.
