--- a/Committee.html
+++ b/Committee.html
@@ -238,6 +238,7 @@
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Brojo Kishore Mishra, Principal and Professor, Department of Computer Science & Engineering, MITS Institute of Polytechnic, Odisha, INDIA.
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. C.V. Suresh Babu, Educational consultant, NITTTR Chennai Area
           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. D.Rajinigirinath, R&D and Computer Science and Engineering, Mailam Engineering College, Mailam,Tamilnadu, INDIA.
+          <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Dinesh Mavaluru, ASSISTANT PROFESSOR, SAUDI ELECTRONIC UNIVERSITY, RIYADH
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Fokrul Alom mazarbhuiya, College of Computer Science & IT Albaha University, Albaha, KSA
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. G.Dalin, Assistant Professor, Department of Information Technology, SNMV College, Malumachampatti, INDIA.
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Ghanshyam Singh, MNIT, Jaipur
@@ -251,6 +252,7 @@
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Lokesh Chouhan, Department of Computer Engineering, NITH
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Loveleen Gaur, Amity University, Noida
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Madhushi Verma, Department of CSE, School of Engineering and Applied Sciences, BENNETT University, Noida
+           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. MAHFUZUL HUDA, ASSISTANT PROFESSOR, SAUDI ELECTRONIC UNIVERSITY, RIYADH
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Md Husamuddin, Computer Science Department, Al Baha University, Saudi Arabia
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Minakshi Tripathi, MNIT, India
            <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);"> Dr. Mohammed Ali Hussain, Department of Computer Science & Engineering, Sri Sai Madhavi Institute of Science & Tech., Rajahmundry, A.P., INDIA
