--- a/Committee.html
+++ b/Committee.html
@@ -225,6 +225,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="padding: 10px;background: rgba(0, 63, 235, 0.08);border: 1px solid rgba(0, 63, 235, 0.71);"> 
              Dr. A.V.Senthil Kumar, Professor, PG and Research Department of Computer Applications, Hindusthan College of Arts and Science Coimbatore, Tamilnadu, INDIA
           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Abdul J. Shaikh Azad, Assistant Professor, Department of Computer Science, PSGVP Mandal's Arts, Commerce and Science College, Maharashtra, INDIA
+          <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Abdullah, Assistant Professor, Department of Information Technology, College of Engineering & Technology, Adigrat University
           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Abhishek Gupta, CSE, SMVDU, Jammu
           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Aftab Alam , Department of Computer Science King Khalid University Abha, KSA
           <hr style="margin: 10px 0; border-top:1px solid rgba(0, 63, 235, 0.71);">  Dr. Ahmed Elaraby, Lecturer Assistant of Computer Science Department of Mathematics Faculty of Science, South Valley University, Qena, 83523, Egypt.
