--- a/schedule.html
+++ b/schedule.html
@@ -39,7 +39,7 @@
         <img class="imgb" align="center" src="images/jc.png">
         <img class="JECRC"  src="http://www.jecrcfoundation.com/images/logo.jpg">
         <img class="ICITDA" src="images/ICITDA.png"> 
-        <img class="CSI" src="images/CSI.png"> 
+        <!-- <img class="CSI" src="images/CSI.png">  -->
         <img class="ACM" src="images/ACM.png"> 
         </div>
     </div>
