--- a/dates.html
+++ b/dates.html
@@ -99,37 +99,30 @@
     <table class="table table-responsive" >        
     <tbody style="padding-left: 20px;">        
             <tr>       
-                    <td style="border: none;"> Submission of Abstract
+                    <td style="border: none;">  Submission of Manuscript
                  </td>        
-                    <td style="border: none;">     <span style=""><s>30<sup>th</sup> January, 2018</s>  26<sup>th</sup> February, 2018
+                    <td style="border: none;">     <span style=""><s>5<sup>th</sup> March, 2018</s>    20<sup>th</sup> March, 2018
                 
                 </span>       
                     </td>      
                     </tr>       
-    <tr>       
-    <td> Submission of Manuscript
- </td>        
-    <td style="border-bottom: 1px">     <span style=""><s>20<sup>th</sup> February, 2018</s>  5<sup>th</sup> March, 2018
-
-</span>       
-    </td>      
-    </tr>      
+  
     <tr>       
     <td> Acceptance Notification
  </td>        
-    <td style="border-bottom: 1px"> <span style=""><s>1<sup>st</sup>March, 2018</s>  11<sup>th</sup>March, 2018
+    <td style="border-bottom: 1px"> <span style=""><s>11<sup>th</sup>March, 2018</s>  25<sup>th</sup>March, 2018
 </span>        
     </td>      
     </tr>      
     <tr>       
     <td> Submission of Camera Ready Paper
 </td>     
-    <td> <s>10<sup>th</sup> March, 2018</s>  17<sup>th</sup> March, 2018
+    <td> <s>17<sup>th</sup> March, 2018</s>  29<sup>th</sup> March, 2018
  </td>       
     </tr>      
     <tr>       
     <td> Registration </td>       
-    <td ><s>15<sup>th</sup> March, 2018</s>   25<sup>th</sup> March, 2018 </td> 
+    <td ><s>25<sup>th</sup> March, 2018</s>   31<sup>st</sup> March, 2018 </td> 
     </tr>      
     </tbody>       
     </table>       
