--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@ et dolore magna aliqua. Ut enim ad minim veniam
  
 </div> -->
 <div class="row" >
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Abstract:<br/> <s>January 30, 2018</s><b> February 26, 2018 (open)</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Manuscript deadline:<br/><s> February 20, 2018</s><b>  March 5, 2018 (open)</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Acceptance notification:<br/><s>March 01, 2018</s><b> March 11, 2018</b></p> </div></div>
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of camera ready paper:<br/><s>March 10, 2018</s><b>  March 17, 2018</b></p> </div></div>
+  <!-- <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Abstract:<br/> <s>January 30, 2018</s><b> February 26, 2018 (open)</b></p> </div></div> -->
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of Manuscript deadline:<br/><s> March 5, 2018</s><b>  March 20, 2018 (open)</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Acceptance notification:<br/><s>March 11, 2018</s><b> March 24, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Submission of camera ready paper:<br/><s>March 17, 2018</s><b>  March 29, 2018</b></p> </div></div>
   
-  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration:<br/><s> March 15, 2018</s><b>  March 25, 2018</b></p> </div></div>
+  <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Last Date of Registration:<br/><s> March 25, 2018</s><b>  March 31, 2018</b></p> </div></div>
 
   <div class="col-xs-12 col-md-4"><div class="corbett_box"> <p>Date of Conference:<br/><b> April 6-7, 2018</b></p> </div></div>
 
